# live-test

./: .env  Cargo.toml  Makefile  Odra.toml  README.md
.builder_casper/: Cargo.toml
.builder_casper/src/: contracts_build.rs  flipper_wasm.rs  some_contract_wasm.rs
resources/: some_contract_schema.json
src/: lib.rs  some_contract.rs
wasm/: flipper.wasm  some_contract.wasm
