[package]
name = "something"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { version = "0.4.0", features = [], default-features = false }

hex = "0.4.3"
# borsh = "0.10.3"

[features]
default = ["mock-vm"]
mock-vm = ["odra/mock-vm"]
casper = ["odra/casper"]
casper-livenet = ["odra/casper-livenet"]

[[bin]]
name = "deploy"
path = "bin/deploy.rs"
required-features = ["casper-livenet"]
